# ChangeLog for media-gfx/splashutils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.129 2008/02/19 22:57:13 opfer Exp $

  19 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  splashutils-1.5.3.4.ebuild:
  stable x86, bug 210588

  19 Feb 2008; nixnut <nixnut@gentoo.org> splashutils-1.5.3.4.ebuild:
  Stable on ppc wrt bug 210588

  03 Feb 2008; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.3.4.ebuild:
  Switch the build to EAPI 1, make the png, mng and truetype flags enabled by
  default.

*splashutils-1.5.3.4 (27 Jan 2008)

  27 Jan 2008; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.4.ebuild:
  Version bump.  Fixes bug #206998.

  15 Jan 2008; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.3.3.ebuild:
  Fix bug #205919.

*splashutils-1.5.3.3 (06 Jan 2008)

  06 Jan 2008; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.3.ebuild:
  Version bump (fixes bugs #200217, #200668).

  23 Dec 2007; Michał Januszewski <spock@gentoo.org>
  -splashutils-1.5.2.ebuild, -splashutils-1.5.3.ebuild,
  -splashutils-1.5.3.1.ebuild:
  Remove old ebuilds.

  23 Dec 2007; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.3.2.ebuild:
  Add info about the fbcondecor USE flag for users upgrading from pre-1.5.3
  versions (bug #202686).

  21 Dec 2007; nixnut <nixnut@gentoo.org> splashutils-1.5.2.1.ebuild:
  Stable on ppc wrt bug 195443

*splashutils-1.5.3.2 (16 Dec 2007)

  16 Dec 2007; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.2.ebuild:
  Version bump.

*splashutils-1.5.3.1 (05 Dec 2007)

  05 Dec 2007; Michał Januszewski <spock@gentoo.org>
  +splashutils-1.5.3.1.ebuild:
  Version bump: minor bugfixes.

  01 Dec 2007; Michał Januszewski <spock@gentoo.org>
  splashutils-1.5.3.ebuild:
  Fix bug #200911: don't install documentation both to
  /usr/share/doc/splashutils and /usr/share/doc/splashutils-<ver>.
