@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/splashutils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.129 2008/02/19 22:57:13 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.130 2008/02/25 23:03:56 spock Exp $
+
+*splashutils-1.5.4 (25 Feb 2008)
+
+  25 Feb 2008; Michał Januszewski <spock@gentoo.org>
+  +splashutils-1.5.4.ebuild:
+  Version bump.
 
   19 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
   splashutils-1.5.3.4.ebuild:
